--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .image{
   height: 10rem;
   width: 10rem;
@@ -10,4 +14,190 @@
 
 .widget{
   margin:.2rem;
+}
+
+.cart{
+  width: 2rem;
+  height: 2rem;
+}
+
+.cart:hover{
+  width: 2.4rem;
+}
+
+.header-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color:white;
+  background-color: black;
+}
+.nav-container{
+  border: 1px solid;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 80%;
+  justify-content: space-evenly;
+  background-color: rgb(255, 254, 254);
+  margin:.5rem;
+  border-radius: 1rem;
+}
+
+.pending,.active {
+  text-decoration: none;
+}
+
+.pending{
+  color:black;
+}
+
+.pending:hover{
+  font-weight: bold;
+}
+
+.active{
+  color: black;
+  font-weight: bold;
+}
+
+.exit-btn{
+  width: 3rem;
+  height: 2rem;
+  font-size: 1.1rem;
+  color:white;
+  background-color: black;
+  border-radius: 1rem;
+}
+
+.exit-btn:hover{
+  font-size:1rem;
+  font-weight: bold;
+}
+
+.user-name-capt{
+  font-size: 1.5rem;
+  margin-top:none;
+}
+
+/*Home*/
+
+.home-container{
+  width: 100%;
+  height: 80vh;
+}
+
+.pop-categories{
+  display:flex;
+  flex-direction:column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.short-info{
+  border:1px solid;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color:white;
+  background-color: black;
+  padding:.5rem;
+}
+
+/*Shop*/
+
+.market-container{
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.filter-container{
+  display: flex;
+  flex-direction: row;
+  height: 3rem;
+  width: 80%;
+  margin:0.5rem;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: black;
+  color:white;
+  border-radius:1.5rem;
+}
+
+.filter-inp{
+  width: 30%;
+  height: 1.5rem;
+  border-radius: 1rem;
+}
+
+.filter-btn{
+  width: 4.5rem;
+  height: 2rem;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  border-radius: 1rem;
+}
+.filter-btn:hover{
+  font-weight: lighter;
+  font-size: 1rem;
+}
+
+.product-widget{
+  width: 30%;
+  min-height: 16rem;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin:.5rem;
+  background-color: rgb(79, 79, 79);
+  color: white;
+  padding: .3rem;
+}
+
+.prod-btn{
+  width: 60%;
+  margin:.2rem;
+  background-color: white;
+  color:black;
+  font-weight: bold;
+  border-radius: 1rem;
+}
+
+.blogsContainer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin:1rem auto;
+}
+
+.blog-widget{
+  width: 22rem;
+  min-width: none;height: 26rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  color:white;
+  background-color: rgb(64, 64, 64);
+  border-radius: 1rem;
+}
+
+.blog-btn{
+  height: 2rem;
+  width: 4.5rem;
+  border-radius: 1rem;
+  font-size:1rem;
+}
+
+.blog-btn:hover{
+  font-weight: bold;
 }
